--- a/KnowledgeBase/.obsidian/workspace
+++ b/KnowledgeBase/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Quality.md",
+            "file": "Daily Notes/2022-03-04.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Quality.md",
+                "file": "Daily Notes/2022-03-04.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,15 +88,15 @@
   },
   "active": "00ce5223758c7ee4",
   "lastOpenFiles": [
+    "Daily Notes/2022-03-04.md",
     "Quality.md",
+    "Digitalisation/Art3mis.md",
     "Manufacturing/Manufacturing.md",
     "Manufacturing/Quality/Tolerance.md",
-    "Business/Operative Margin.md",
-    "Manufacturing/Channels/Channel 4B.md",
-    "Channels.md",
-    "Business/Customer.md",
-    "Business/Industry.md",
+    "Digitalisation/Smart Maintenace.md",
     "Digitalisation/MPM.md",
-    "Digitalisation/Smart Maintenace.md"
+    "Digitalisation/Connectivity.md",
+    "Business/Operative Margin.md",
+    "Manufacturing/Channels/Channel 4B.md"
   ]
 }
