--- a/KnowledgeBase/.obsidian/workspace
+++ b/KnowledgeBase/.obsidian/workspace
@@ -9,11 +9,49 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Daily Notes/2022-03-04.md",
+            "file": "Digitalisation/Art3mis.md",
             "mode": "source",
+            "backlinks": true,
             "source": false
           }
-        }
+        },
+        "group": "27606703137d50f1"
+      },
+      {
+        "id": "b76fa9c4e1eb6697",
+        "type": "leaf",
+        "state": {
+          "type": "localgraph",
+          "state": {
+            "file": "Digitalisation/Art3mis.md",
+            "options": {
+              "collapse-filter": true,
+              "search": "",
+              "localJumps": 1,
+              "localBacklinks": true,
+              "localForelinks": true,
+              "localInterlinks": false,
+              "showTags": false,
+              "showAttachments": false,
+              "hideUnresolved": false,
+              "collapse-color-groups": true,
+              "colorGroups": [],
+              "collapse-display": true,
+              "showArrow": false,
+              "textFadeMultiplier": 0,
+              "nodeSizeMultiplier": 1,
+              "lineSizeMultiplier": 1,
+              "collapse-forces": true,
+              "centerStrength": 0.518713248970312,
+              "repelStrength": 10,
+              "linkStrength": 1,
+              "linkDistance": 250,
+              "scale": 1,
+              "close": false
+            }
+          }
+        },
+        "group": "27606703137d50f1"
       }
     ],
     "direction": "vertical"
@@ -40,7 +78,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "",
+                "query": "mindmap",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -69,14 +107,37 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Daily Notes/2022-03-04.md",
+                "file": "Digitalisation/Art3mis.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
-                "showSearch": false,
+                "showSearch": true,
                 "searchQuery": "",
-                "backlinkCollapsed": false,
+                "backlinkCollapsed": true,
                 "unlinkedCollapsed": false
+              }
+            }
+          },
+          {
+            "id": "566d935a70492a6b",
+            "type": "leaf",
+            "state": {
+              "type": "outgoing-link",
+              "state": {
+                "file": "Digitalisation/Art3mis.md",
+                "linksCollapsed": false,
+                "unlinkedCollapsed": true
+              }
+            }
+          },
+          {
+            "id": "4f3c92b3ffa04fb7",
+            "type": "leaf",
+            "state": {
+              "type": "tag",
+              "state": {
+                "sortOrder": "frequency",
+                "useHierarchy": true
               }
             }
           }
@@ -84,19 +145,20 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300
+    "width": 300,
+    "collapsed": true
   },
-  "active": "00ce5223758c7ee4",
+  "active": "b76fa9c4e1eb6697",
   "lastOpenFiles": [
-    "Daily Notes/2022-03-04.md",
-    "Quality.md",
     "Digitalisation/Art3mis.md",
-    "Manufacturing/Manufacturing.md",
-    "Manufacturing/Quality/Tolerance.md",
-    "Digitalisation/Smart Maintenace.md",
-    "Digitalisation/MPM.md",
+    "Manufacturing/Channels/Channel 4B.md",
+    "Day Planners/2022-03-06.md",
     "Digitalisation/Connectivity.md",
-    "Business/Operative Margin.md",
-    "Manufacturing/Channels/Channel 4B.md"
+    "Digitalisation/Digitalisation Kanban.md",
+    "Digitalisation/MPM.md",
+    "Digitalisation/Smart Maintenace.md",
+    "Manufacturing/Quality/Tolerance.md",
+    "Manufacturing/Manufacturing.md",
+    "Complete SPC 62 Tests.md"
   ]
 }
