--- a/KnowledgeBase/.obsidian/workspace
+++ b/KnowledgeBase/.obsidian/workspace
@@ -4,54 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "00ce5223758c7ee4",
+        "id": "fda7e8f24ce41164",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Digitalisation/Art3mis.md",
-            "mode": "source",
-            "backlinks": true,
-            "source": false
-          }
-        },
-        "group": "27606703137d50f1"
-      },
-      {
-        "id": "b76fa9c4e1eb6697",
-        "type": "leaf",
-        "state": {
-          "type": "localgraph",
-          "state": {
-            "file": "Digitalisation/Art3mis.md",
-            "options": {
-              "collapse-filter": true,
-              "search": "",
-              "localJumps": 1,
-              "localBacklinks": true,
-              "localForelinks": true,
-              "localInterlinks": false,
-              "showTags": false,
-              "showAttachments": false,
-              "hideUnresolved": false,
-              "collapse-color-groups": true,
-              "colorGroups": [],
-              "collapse-display": true,
-              "showArrow": false,
-              "textFadeMultiplier": 0,
-              "nodeSizeMultiplier": 1,
-              "lineSizeMultiplier": 1,
-              "collapse-forces": true,
-              "centerStrength": 0.518713248970312,
-              "repelStrength": 10,
-              "linkStrength": 1,
-              "linkDistance": 250,
-              "scale": 1,
-              "close": false
-            }
-          }
-        },
-        "group": "27606703137d50f1"
+          "type": "graph",
+          "state": {}
+        }
       }
     ],
     "direction": "vertical"
@@ -78,7 +36,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "mindmap",
+                "query": "tag:#Oasys",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -107,13 +65,12 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Digitalisation/Art3mis.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
                 "showSearch": true,
                 "searchQuery": "",
-                "backlinkCollapsed": true,
+                "backlinkCollapsed": false,
                 "unlinkedCollapsed": false
               }
             }
@@ -124,9 +81,8 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "Digitalisation/Art3mis.md",
-                "linksCollapsed": false,
-                "unlinkedCollapsed": true
+                "linksCollapsed": true,
+                "unlinkedCollapsed": false
               }
             }
           },
@@ -145,20 +101,19 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300,
-    "collapsed": true
+    "width": 300
   },
-  "active": "b76fa9c4e1eb6697",
+  "active": "fda7e8f24ce41164",
   "lastOpenFiles": [
-    "Digitalisation/Art3mis.md",
-    "Manufacturing/Channels/Channel 4B.md",
-    "Day Planners/2022-03-06.md",
-    "Digitalisation/Connectivity.md",
-    "Digitalisation/Digitalisation Kanban.md",
-    "Digitalisation/MPM.md",
-    "Digitalisation/Smart Maintenace.md",
-    "Manufacturing/Quality/Tolerance.md",
-    "Manufacturing/Manufacturing.md",
-    "Complete SPC 62 Tests.md"
+    "Automation.md",
+    "People/Fabio Busolini.md",
+    "People/Piero Valle.md",
+    "People/Alessandro Capano.md",
+    "People/Roberto Napione.md",
+    "People/Roberta Granato.md",
+    "People/Paolo Mameli.md",
+    "People/Roberto Prot.md",
+    "Script.md",
+    "Quality.md"
   ]
 }
